; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/common/extr_ulpi.c_ulpi_uevent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/common/extr_ulpi.c_ulpi_uevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.kobj_uevent_env = type { i32 }
%struct.ulpi = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"MODALIAS=ulpi:v%04xp%04x\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.kobj_uevent_env*)* @ulpi_uevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ulpi_uevent(%struct.device* %0, %struct.kobj_uevent_env* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.kobj_uevent_env*, align 8
  %6 = alloca %struct.ulpi*, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.kobj_uevent_env* %1, %struct.kobj_uevent_env** %5, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.ulpi* @to_ulpi_dev(%struct.device* %8)
  store %struct.ulpi* %9, %struct.ulpi** %6, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %12 = call i32 @of_device_uevent_modalias(%struct.device* %10, %struct.kobj_uevent_env* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @ENODEV, align 4
  %15 = sub nsw i32 0, %14
  %16 = icmp ne i32 %13, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %35

19:                                               ; preds = %2
  %20 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %21 = load %struct.ulpi*, %struct.ulpi** %6, align 8
  %22 = getelementptr inbounds %struct.ulpi, %struct.ulpi* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ulpi*, %struct.ulpi** %6, align 8
  %26 = getelementptr inbounds %struct.ulpi, %struct.ulpi* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @add_uevent_var(%struct.kobj_uevent_env* %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %19
  %32 = load i32, i32* @ENOMEM, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %3, align 4
  br label %35

34:                                               ; preds = %19
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %31, %17
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local %struct.ulpi* @to_ulpi_dev(%struct.device*) #1

declare dso_local i32 @of_device_uevent_modalias(%struct.device*, %struct.kobj_uevent_env*) #1

declare dso_local i64 @add_uevent_var(%struct.kobj_uevent_env*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
